differences btw Cathcart and Murray

--- a/Relations between navy and diplomats.page
+++ b/Relations between navy and diplomats.page
@@ -1,6 +1,6 @@
 Most of the time, it seems that the naval officers and the Mediterranean diplomats, if not completely in sync with each other, at least didn't get in each others' way. Sometimes they directly clashed, though.
 
-### William Eaton
+### *Gloria* affair
 - BW2:145: [Alexander Murray]() takes [William Eaton]() to task for hiring the *Gloria* "on Public account" and tells him that he has dismissed the *Gloria* from public service, 6 May 1802: "However unpleasant a circumstance it is to disapprove of any measures which you have adopted & which I beleive you have deemed expedient, in your Zeal to serve our Country, yet as an Officer in the U. States service my Duty compels me to check all unwarrantable expences"
     - Not everyone agrees with Murray's perspective: Purser [Charles Wadsworth]() of the [USS *Boston*]() says that he thinks sending the *Gloria* to Gibraltar was the right idea, 20 May 1802 (BW2:161)
 - BW2:146: [Alexander Murray]() does not have a high opinion of the diplomats; he writes to SecNav: " there are at this time a Squadron of Sweedish Frigates on that Coast [of Tripoli], so that we have but little to fear from any of the Barbary, States, tho our Consuls make a great fuss about nothing"
@@ -28,3 +28,6 @@ Most of the time, it seems that the naval officers and the Mediterranean diploma
 
 # Balance of powers
 - BW2:244: SecState writes to [James Leander Cathcart](): "To provide for any contingency to yourself, which might produce disappointment or delay, Commodore Morris will be instructed, should the negotiation not be over, to carry it on himself if necessary;and as he will be in a manner the centre of information, and will have a certain relation to all the measures connected with our Mediterranean &airs, the President thinks it proper, that the proceedings which may remain for the fulfillment of your instructions, should be concerted with him and receive his sanction," 22 August 1802 -- This is not how it had gone previous to this point; the diplomats and commodore worked toward the same goal but not necessarily with the same tactics or the same zeal
+
+# Differences of opinion
+- BW2:288: [James Leander Cathcart]() notes that [Alexander Murray]() has a significantly different perspective on how to approach the Barbary problem than he has; " as he says he has no instructions either from government or the Comodore & I not yet having receiv'd mine which came out in the *Adams* I have made no opposition to what he advances in order to prevent as much as possible those little bickerings & animosities which are too often engender'd by diversity of opinion, I am extremely anxious to receive my instructions in order to have some guide to regulate my conduct by where such diversity of opinion prevails" (8 October 1802)
