--- a/Captivity.page
+++ b/Captivity.page
@@ -13,6 +13,7 @@
 - [Alexander Murray]() notes the arrival of the two Tripolitan galleys that took the *Franklin* at Tripoli, but does not record that he in any way tried to give chase or attack said ships (BW2:207, 21 July 1802)
 - [Alexander Murray]() reports that 2 of the crew escaped in a Greek boat during the skirmish between the [USS *Constellation*]() and the Tripolitan gun boats; 3 had been claimed by the British; so only 4 were left in captivity as of 20 August 1802 (BW2:242)    
 - 22 September 1802: [Nicholas Nissen]() reports that the prisoners have been released and are on a ship on its way to Algiers; Nissen again went to bat for the American prisoners in  a big way; he requests reimbursement for the many things he purchased on their behalf (BW2:281-82) 
+- 11 October 1802: [Richard O'Brien]() reports that Morris and 4 other seamen arrived in Algiers on 6 October, after (O'Brien says) the dey of Algiers requested their release; the dey then sent Morris et al. to O'Brien as a "present" to the United States (BW2:289)
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
