--- a/Tripoli.page
+++ b/Tripoli.page
@@ -18,6 +18,7 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
     - O'B is warned by marine minister to tread lightly around the dey, who was going to crack down on the Spanish, British, and French (to which O'B replied that he didn't care what the dey did with them, he was going to report that Algiers was no friend of America but of Tripoli)
     - The dey came to some agreement about the Franklin, which was disregarded, at which time the dey ordered the corsair and prize to leave Algiers immediately
 - BW2:279: [William Eaton]() says that "the Algerine Jew, Azulai" has told him that Algiers ordered Tripoli to give up the prisoners from the *Franklin*, but Eaton says, "we cannot suppose the Dey's interference in the present case can be pleasing to your Exy [[Yusuf Karamanli]()]: We believe it would suit better both the independence of your Ex" character and the interests of the parties that all our negociations should be direct and without the intervention of any other power" (18 September 1802) 
+- BW2:289: [Richard O'Brien]() writes that the dey of Algiers is interested in brokering a treaty between Tripoli and the United States, to the total sum of $120,000 (some of which would go to Algiers as broker, of course) (11 October 1802)
 
 ### Tunis
 - 462: [James Leander Cathcart]() to Sec of State, 4 July 1802
