--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -14,7 +14,13 @@
 	- Sweden and Venice: roughly $24,000-30,000 in money
 	- Great Britain: possibly $280,000/year (though they are embarrassed and so keep their payments hidden from the public)
 - ASP1FR1:107: John Adams to John Jay, 2/16/1786: Europeans send tribute and force simultaneously to ensure treaty is properly enforced
-- BS2:278: [Alexander Murray](): "Policy dictates the surer, tho not the most dignified, custom of paying Tribute, or given douceurs, which I believe every Nation in Europe doth, 'tho at this time the French Republic hath a squadron of two Ships of the line, a Frigate, & Corvette at Tunis, which are acting upon proper grounds, & make Peece upon their terms, they make a great parade, & are striving for a monopolizement of the Mediterranean Commerce, for the Seas are now covered with their Vessels, how then, situated as we are, can we expect to stand almost alone in this Warfare" (18 September 1802)
+- BW2:278: [Alexander Murray](): "Policy dictates the surer, tho not the most dignified, custom of paying Tribute, or given douceurs, which I believe every Nation in Europe doth, 'tho at this time the French Republic hath a squadron of two Ships of the line, a Frigate, & Corvette at Tunis, which are acting upon proper grounds, & make Peece upon their terms, they make a great parade, & are striving for a monopolizement of the Mediterranean Commerce, for the Seas are now covered with their Vessels, how then, situated as we are, can we expect to stand almost alone in this Warfare" (18 September 1802)
+- BW2:289-90: [Richard O'Brien]() details the various things Europeans have done to buy peace with Tripoli, October 1802:
+    -  "dean [Danish] commodore in august to prevent a war with Tripoli has given the Pascha of tripoli the Sum of 30 Thsd dollars for 5 years peace and an Annuity of 5 Thousd dollars and presents Supose Thus The 5 years will cost denmark The Sum of 60 thousand dollars"
+    -  The French negotiated a peace between Sweden and Tripoli, for the amount of $130,000 (including the release of captives)
+    -  Dutch will likely pay out the same as the Danes, says O'Brien
+    -  French under Bonaparte have given a corsair of 14 guns, plus presents--in all, worth about $25,000
+
 
 ## Use of force
 - ASP1FR1:105: Need to have force that matches Algerine force? Or do we just need a force to match some, since they rarely travel/cruise in unison?
