--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -48,6 +48,8 @@ awe inspired by a display of our force before his eyes and his capital."
 
 ## Benefits of settlement
 
+## [Objections to settlement]()
+
 ## Specific negotiations
 - [Algiers]()
 - [Tunis]()
