--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -22,25 +22,7 @@
     -  French under Bonaparte have given a corsair of 14 guns, plus presents--in all, worth about $25,000
 
 
-## Use of force
-- ASP1FR1:105: Need to have force that matches Algerine force? Or do we just need a force to match some, since they rarely travel/cruise in unison?
-	- Suggests a blockade using a single or a few vessels in front of Algiers during 8 temperate months, as Portugal has done before Gibraltar
-- ASP1FR1:107: Richard O'Brien to TJ, 6/13/1789: Sees treaty-making with Algiers as impolitic while they take so many liberties with the treaties they already have
-- BW1:401: [William Bainbridge]() to Sec of Navy, 17 November 1800: "I do not hesitate in saying, that 6 or 8 frigates in the Mediterranean Sea, would give us more permanent security, than any Treaty that can be made with the States of Barbary."
-- BW1:581: [Richard O'Brien]() to Sec of State, 26 Sept 1801: "we want More frigates in This Sea--and our system with those states at war with the U states should be Severity--Any act of Lenity is considered by Them as -- an act of Timidity"
-- BW2:112: [James Leander Cathcart](): "The President in his speech recommends coercive measures against Tripoli, the popular opinion so far as it is publickly declared, is millions for defense but not one cent for tribute" (10 April 1802)
-- BW2:126: SecState suggests to [James Leander Cathcart]() that having the whole squadron stand off Tripoli while Cathcart is negotiating might give him a better chance of getting a good deal (18 April 1802)
-    - Suggests waiting for the bashaw to respond to the show of force: "As it is evidently desireable, that the first overtures should come from the Bashaw, you will wait a reasonable time for the effect of his disposition on this subject, or of the
-awe inspired by a display of our force before his eyes and his capital."
-    - Payment cannot be part of the negotiations because payment to Tripoli would jeopardize their standing with Tunis, who has just finished being paid off (BW2:127)
-    - Algiers must be taken out of any treaty as arbiter, but without making Algiers angry---make it look like it was the bashaw's idea to remove Algiers, not the USA's
-    - [Sweden]() should be consulted about the treaty, but any treaty the USA negotiates must be viewed as completely separate from anything done by Sweden, and must be seen as done with no collusion between the two countries
-    - If a treaty is made, a consul must be re-established, but as the bashaw is the one who removed the consulate in the first place, he must not expect any gifts to mark the arrival of a new consul---in the meantime, continue to rely on [Nicholas Nissen]() as a substitute
-- BW2:130: SecNav to [Richard Valentine Morris](): "Holding out the olive Branch in one hand & displaying in the other the means of offensive operations, may produce a peaceful disposition towards us in the mind of the Bashaw, and essentially contribute to our obtaining an advantageous treaty with him" (20 April 1802).
-- BW2:163: [Alexander Murray]() writes that "it is not amiss to shew those Folks [Tunisians] our Ships, now, & then, they are powerful advocates in our favor" (1 June 1802)
-- BW2:218: [Alexander Murray]() admits that he is not certain whether a skirmish in which the Americans demonstrated superior fire power over the Tripolitan fleet would actually accomplish anything in terms of treaty negotiations (30 July 1802)
-- BW2:235: [Alexander Murray]() thinks that force is pointless unless the European nations also stop paying tribute: "America hath certainly shewn a very laudable pride, & a dignity, in her efforts to abolish the obnoxious custom of paying Tribute, but unless the European Nations, cooperate more generally with us, & abolish that narrow minded Policy, that yet prevails with some of the most potent Powersl much better situated than we are, for keeping up perpetual Warfare with them, or till they are brought to proper terms, it will be more prudent for us, also, to submit to the Indignity, at the expence of our Pride, they are not a Commercial People therefore we can make no impression upon them"
-    - Murray seems to be arguing here against [Blockade effectiveness]() also?
+## [Use of force]()
 
 # Use of payment
 ## Price of settlement
