French dispute over seamen

--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -29,7 +29,7 @@ Title: "Olive Branch in One Hand"?
 
 ## France
 - Big incident with Captain [Daniel McNeill](): Lied to the quarantine officer at [Toulon]() about where he had stopped in the Mediterranean in order to avoid a lengthy quarantine; he additionally left port with three French officers and an officer from the [USS *President*]() on board (BW2:28)
-- 
+- BW2:292: The commander of the French division at Leghorn demanded a sailor off the [USS *Constellation*](), who they claimed was being detained. [Alexander Murray]() claimed instead that the man was Swiss, taken by a French privateer and then captured by the Americans off the American coast, and that he had joined the *Constellation* of his own free will; Murray requested that [Thomas Appleton]() convey this information to the French division (12 October 1802)
 
 ## Tunis
 - Instead of making an international incident over the capture of a Tunisian xebec by [Andrew Sterett](), the bey of Tunis invites [William Eaton]() to talk about allowing Tunis to help negotiate a treaty between the USA and Tripoli (BW2:159, 24 May 1802)
