passports to smooth relations with Morocco

--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -18,6 +18,7 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - Simpson wonders whether it would be better to just give Morocco their wheat ship passports, rather than causing panic amongst insurance companies that could cause them to raise their rates and engender real commercial problems for ships in the Mediterranean (BW2:182, 17 June 1802)
     - [Richard Valentine Morris]() points out that it would be foolish to blockade a port if they just let in ships with supplies from neighboring nations; he declines the passports once again, but asks for a little leniency as he expects orders from the SecNav soon (BW2:182, 19 June 1802)
     - [James Simpson]() was indeed forced to retire from Morocco as consul, 25 June 1802 (BW2:183); he issues a circular warning all ships not to travel through the Straits unconvoyed
+- BW2:296: [Richard Valentine Morris](), hearing from [Alexander Murray]() that there is plenty of bread in Tripoli and provisions are cheap, authorizes passports for Moroccan ships wanting to carry wheat to Tripoli, reasoning that it won't make that much difference for Tripoli but it might smooth over relations with Morocco, 15 October 1802
 
 ## Other nations' relations with the Barbary states
 - BW2:67: [Nicholas Nissen]() expresses surprise at how the Swedish ships have taken hostile action against Tripoli while they are still technically at peace with Tripoli, 21 April 1802
