Months of unsafe weather

--- a/Weather.page
+++ b/Weather.page
@@ -15,4 +15,4 @@ Weather was a significant factor in whether or not American naval vessels were o
 
 - BW2:203: [USS *Essex*](), 14 July 1802, records a storm that carried away "Main top mast, main & fore top gallt yards & split Main top gallt mast. Jno Bradley & Jno Weyant
 seamen went overboard with the rigging & were lost." (See also [Physical accidents to ships or persons]().) 
-- 
+- BW2:296: [Richard Valentine Morris]() notes that the passage from the United States to the Mediterranean took 55 days, and then having to stay in Gibraltar to sort things with Morocco, pushed the [USS *Chesapeake*]() to the place where it was almost pointless to head for Tripoli. He says he will go, but that November and December are not months that are safe for the American squadron to be out on station (15 October 1802)
