--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -11,7 +11,7 @@
     - Morris outlines how the Tripolitan cruisers are able to get out
     - He offers this as an alternate plan: "Two Ships employed in the blockade here to keep up appearances, for it is no more, understand me - I mean a close Blockade without any indulgences, not at 6, & 8 leagues distance and oftentimes out of sight for days; all the rest of our force should be employed in cruising between Susa, Cape Bon, and Sicily; one Summer spent with vigilance in this manner I am certain would convince the Bashaw that America was in earnest procure me my liberty and an honorable peace for my country" (BW2:177)
 - [Alexander Murray]() too sees the blockade as ineffective: "Altho we keep up the Blockade with all our diligence, & am myself seldom out of sight of the Town, the other Ships stationed in a Line along the Coast, yet they do contrive to get their small row Galleys out, in the night, in defiance of us, by rowing close under the land, & taking shelter occasionally in the small Ports, with which this coast abounds, for our parts, we dare not venture too close in, on account of sudden Calms, & no Anchorage till you are nearly on the Beach" (BW2:192-93, 8 July 1802)
-    - [Need for different ships]()
+
 - BW2:212: [Nicholas Nissen]() points out to [William Eaton]() that he has not seen a frigate off Tripoli for 5 days (27 July 1802)
     - He further notes: "In a few days will depart from here 3 or 4 Gallies, & certainly the blockade of this port will neither prevent them from going out, or returning with prizes" (BW2:213) 
     - He notes yet further that the grain harvest has been good in 1802, and therefore the blockade is less effective than the previous year when Tripoli was in famine (BW2:213)
@@ -24,3 +24,5 @@
 
 ## Causes for ineffectiveness
 - BW2:277: [Alexander Murray]() writes that he had to leave the blockade because he is out of almost all supplies and is probably going to go all the way to Gibraltar to get stores (18 September 1802)
+
+## [Need for different ships]()
