Counting-house policy

--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -1,3 +1,6 @@
+# Need for the Europeans
+- BW2:298: [William Eaton]() decries European interest in helping America: "I know we have some politicians among us who talk of reliance on the magnanimity of the great powers of Europe to interfere in our behalf - When the lion and the lamb shall lie down together this event will take place; but while jarring interests agitate this world and while the greater powers of Europe are actuated by a counting-house policy, in stead of relying on their magnanimity we must think of defending ourselves against their intrigue here...If there were no Barbary States England and France would erect them" (16 October 1802) 
+
 # Relations with the Americans
 
 - 30 July 1801: [Richard Dale]() warns [Andrew Sterett]() to make sure his men behave in [Malta](), and to obey the laws of the port (BW1:534)
