fight between Jones and Murray

--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -1,6 +1,6 @@
 On paper the regulations concerning how ships and their crews ought to behave were quite clear. In practice they were quite a bit more fluid.
 
-### Rules (perhaps unspoken but clear)
+## Rules (perhaps unspoken but clear)
 - Don't lie about where you've been. (cf. [Daniel McNeill](), BW2:44)
 - Don't take non-crew members away, especially against their will 
     - [Daniel McNeill](), BW2:45: [Richard Dale]() writes him, "Permit me to impress on your mind the necessity there is in keeping up a good understanding mth the Commanders of the Ships that you have to act in conjunction with you will always keep in view (I hope) the Honor of your Country and your Brother Officers"
@@ -9,7 +9,7 @@ On paper the regulations concerning how ships and their crews ought to behave we
     - BW2:42: [Secretary of the Navy]() roundly condemns a packet sent to the Mediterranean with supplies for the squadron, who instead took on private cargo as well, delaying the delivery of supplies to the squadron and forcing them to buy from the British, 28 January 1802---"the whole cargo was brought into jeopardy and the integrity of the commander of the squadron, & indeed of the government of the U. S. itself might have been called in question." 
 
 
-### Guidelines
+## Guidelines
 
 These guidelines aren't quite "rules," but they're strong recommendations about how naval ships should conduct themselves in front of the Barbary States.
 
@@ -37,3 +37,6 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
     - Eaton is also relieved to learn that the Tunisians have much more to complain about how the Swedes have captured their vessels, which takes the pressure off the Americans (BW2:158, 21 May 1802)
     - The plundering that took place turns out to have been a watch and some money from a Turk; [Charles Wadsworth]() hopes that if the three "lads" get the death penalty, they will be executed in Tunis Bay so that the bey of Tunis can see that the American officers did not approve or or authorize the plundering (BW2:161, 29 May 1802)
 - BW2:210: [William Bainbridge]() hears of a mutiny on board the [USS *Essex*](), seemingly because they do not want to return to the USA? He gave his crew the choice between doing as they were ordered to do, or being put in irons. 18 men chose irons. 25 July 1802
+
+## Difficulties between officers and their subordinates
+- BW2:299: Lt. [Jacob Jones]() writes to [Alexander Murray]() to mend the relationship after they apparently had words and Murray put Jones under arrest (for insubordination, apparently) (unknown date)
