--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -11,6 +11,7 @@
     - Simpson decides he needs to consult with [Richard Valentine Morris]() before deciding whether to return to Tangier or not, though of course the [USS *Chesapeake*]() had just left on a cruise before Tripoli, so Simpson sends a letter with the [USS *Enterprise*]() asking to rendezvous with Morris as soon as possible (BW2:190, 3 July 1802)
 - BW2:206: SecNav orders 100 gun carriages as present for the emperor of Morocco (20 July 1802)
     - BW2:239: Order is apparently countermanded, reports SecNav to [James Barron](), 19 August 1802
+    - BW2:303: Order for gunn carriages reinstated, around 21 October 1802
 - BW2:207: SecState reports that the emperor of Morocco has removed his request for passports to Tripoli, but that the president of the US has also granted passports for Moroccan vessels to travel to Tunis, 22 July 1802
     - Cultivating peace with Morocco seen as an incentive for Tripoli to make peace
 - BW2:210: [James Simpson]() goes to Tangier to negotiate peace with Morocco; he also notes that the Moroccan frigate that has been being built is ready for launch and has been authorized to attack Americans (27 July 1802)
