Cora supply ship

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -30,6 +30,7 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 85 barrels of flour
     - 450 bushels of pease
     - 20,000 lb of rice
+- BW2:304: *Cora* dispatched with supplies, 21 October 1802
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
