--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -1,5 +1,7 @@
 # Need for the Europeans
 - BW2:298: [William Eaton]() decries European interest in helping America: "I know we have some politicians among us who talk of reliance on the magnanimity of the great powers of Europe to interfere in our behalf - When the lion and the lamb shall lie down together this event will take place; but while jarring interests agitate this world and while the greater powers of Europe are actuated by a counting-house policy, in stead of relying on their magnanimity we must think of defending ourselves against their intrigue here...If there were no Barbary States England and France would erect them" (16 October 1802) 
+- BW2:305: [William Eaton]() again: "Far from receiving any succour from the magnanimity of the great nations of Europe, we have now demonstrations of their policy to use these instruments of piracy as impediments to the growth of our commerce. Why does Bonaparte, at this peculiar crisis, give Tripoli a cruiser? Why has England assisted the escape of the Tripoline admiral and his soldiers? The object is so clear that the regencies themselves cannot but percieve it: and it encourages their insolence. They have formed an idea that the U States are too far off to coerce them - and the operations of our force have hitherto but confirmed
+them in this security" (22 October 1802)
 
 # Relations with the Americans
 
