--- a/Communications.page
+++ b/Communications.page
@@ -3,6 +3,7 @@
 ## Communications with diplomats
 - 27 July 1802: [Nicholas Nissen]() observes that it is "very seldom that I have any opportunity to correspond with the Commanders of the Situation of the affairs here," perhaps partly because the commanders don't see a need to, but also because the commanders aren't near Tripoli to be communicated with (BW2:213)
 - 15 September 1802: [William Willis]() writes that he wishes Commodore [Richard Valentine Morris]() would have called at Barcelona because he would have been able to pass on info about a Tripolitan cruiser that had been sighted only a few days previous (BW2:275)
+- 22 October 1802: [William Eaton]() writes, "it embarrasses me to account for our squadron having lain ten days in Cagliari, only eighteen hours sail from this, without enquiring whether peace still subsisted here, or without giving me a word of information; more peculiarly so as there are frequent occasions from that port to this [Tunis]. Whatever may be the motive of these omissions, they are injurious in effect to the public interest" (BW2:305)
 
 ## Communications amongst the squadron
 - Communications were terribly slow even though the space the squadron occupied was not that large
