--- a/USS Chesapeake.page
+++ b/USS Chesapeake.page
@@ -1,5 +1,7 @@
 Originally supposed to be captained by [Thomas Truxtun]() (BW2:26)
 
+- Recalled from the Mediterranean along with [USS *Constellation*](), 23 October 1802
+
 ### Captain [James Barron]()
 - Sailed 27 April 1802
 - Arrived in Gibraltar 25 May 1802
