--- a/USS Chesapeake.page
+++ b/USS Chesapeake.page
@@ -1,6 +1,6 @@
 Originally supposed to be captained by [Thomas Truxtun]() (BW2:26)
 
-- Recalled from the Mediterranean along with [USS *Constellation*](), 23 October 1802
+- BW2:307: Recalled from the Mediterranean along with [USS *Constellation*](), though [Richard Valentine Morris]() is ordered to stay and superintend negotiations, 23 October 1802
 
 ### Captain [James Barron]()
 - Sailed 27 April 1802
