--- a/Daniel McNeill.page
+++ b/Daniel McNeill.page
@@ -1,1 +1,2 @@
 - After a number of grievances, SecNav writes to [Richard Valentine Morris]() that the [USS *Boston*]() should be retained in the squadron, but McNeill should be sent home (BW2:232, 13 August 1802)
+- BW2:307: McNeill officially informed that he has been downsized pursuant to the Naval Peace Establishment Act of 1801, 27 October 1802
