poor communications between Murray and Morris

--- a/Communications.page
+++ b/Communications.page
@@ -13,6 +13,7 @@
 - BW2:246: Despite finally hearing from Morris, Murray is not given any actual instructions from him, so he is left going his own way again, 22 August 1802
 - BW2:287: [Hugh G. Campbell](), knowing that he will not hear from Commodore [Richard Valentine Morris]() for several weeks, makes the decision to allow [James Simpson]() to issue a passport for the [*Meshouda*]() (1 October 1802)
     - He writes: "So tedious is Communication about these Seas, that I have now two Letters for him from Captn Murry, dated Malta 20th Augt shall be under the Necessity of returning them to Malta by the first Ship of War that goes."
+- BW2:310: [Alexander Murray]() thinks communications are so poor between him and [Richard Valentine Morris]() (Murray around Malaga and Morris off Tripoli), that he writes to the Secretary of the Navy instead of to Morris, 7 November 1802
 
 ## Communications with Barbary rulers
 - Important to remember that communications often went through at least one, maybe two translators between Barbary ruler and American commodore or diplomat
