--- a/Candid opinions about the war.page
+++ b/Candid opinions about the war.page
@@ -14,3 +14,7 @@ Sometimes people gave their frank opinions about the progress and nature of the 
 Careless renegadoes" (BW2:138)
 - [William Eaton](), contra [Alexander Murray](), 8 June 1802: "I labored to enforce my ideas of pushing the war on Cap. Murray's consent. He says the system is neither in tho view nor the abilities of the U States: but that we must rely on the magnanimity of Europe to regulate these states altogether - Men and nations must undergo more than a Christian regeneration before we shall see Europe volunteering in the protection of the commerce of the U States" (BW2:169)
 - Purser [Charles Wadsworth]() of the [USS *Boston*]() does not agree with the approach Alexander Murray has adopted: He writes to [William Eaton](), "I have very little doubt could you you see him [[Richard Valentine Morris]()] in person you would be able to mange the business respecting the Adimant Bashaw to your wishes - notwithstanding what the old Woman Captn Murray has done" (28 July 1802, BW2:216) 
+
+
+## Lack of energy
+- BW2:311: [William Eaton](): "I am apprehensive Government will be as much disappointd at the ineffectual operations of this season as any individual can have been. It is most unfortunate that any events should have impeded the squadron proceeding to its intended station. The moment was favorable - it is past - and we must retrieve by accelerated energy what we have lost by moderation" (9 November 1802) 
