--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -20,7 +20,7 @@
     -  The French negotiated a peace between Sweden and Tripoli, for the amount of $130,000 (including the release of captives)
     -  Dutch will likely pay out the same as the Danes, says O'Brien
     -  French under Bonaparte have given a corsair of 14 guns, plus presents--in all, worth about $25,000
-
+- BW2:312: [William Eaton]() writes: "The Batavian squadron, which arrived here [Tunis] on the eighth ult. will depart in four days. They certainly succeed in re-establishing their former treaties without new sacrifices; but they come forward with an imposing attitude: a squadron composed of three ships of the line an f several frigates - the Admiral of which De Winter, is an officer of distinguished talents and merit." (9 November 1802)
 
 ## [Use of force]()
 
