--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -15,3 +15,6 @@ board" (18 September 1802)
 
 # Joining forces with other Barbary States
 - BW1:615: [Richard Dale]() is concerned that Tripoli is trying to get the other Barbary States to join forces against the USA, and that he has already succeeded in convincing Tunis to join (6 Nov 1801)
+
+# Deception
+- BW2:312: [William Eaton]() advises [Richard Valentine Morris]() that the Tripolitan cruiser is going to use disguise to fool the Americans: "He has dressed his people in short blue jackets, overalls, and hats, for a decoy" (9 November 1802)
