--- a/USS Adams.page
+++ b/USS Adams.page
@@ -3,3 +3,4 @@
 - sailed from NY 10 June 1802
 - Arrived at Gibraltar 21 July 1802
 - Campbell relieved by [Richard Valentine Morris](), who sailed her back to Washington, arriving 21 November 1803 (BW2:137)
+- Was supposed to have left for the Mediterranean around the end of March, but didn't sail until June; SecNav writes to [Daniel Ludlow]() asking for an explanation of the delay (BW2:313)
