money for hamet

--- a/Coup in Tripoli.page
+++ b/Coup in Tripoli.page
@@ -15,6 +15,7 @@
 - BW2:250-51: [James Leander Cathcart]() writes that [Yusuf Karamanli]()'s hold on Tripoli is tenuous and that all his subjects hate him and he is constantly fearful of uprisings (25 August 1802)
     - Cathcart also seems to be claiming that using Hamet to stage a coup was his idea to begin with
     - Cathcart applauds Eaton's work to make the coup happen: "I must do Mt Eaton the justice to say that they [Eaton's actions] seem to have been judicious dictated by imperious necessity & an honest zeal for the success of an enterprize which promised such vast advantages to our Country"
+- BW2:317: [Richard Valentine Morris]() writes to [Hamet Karamanli]()'s agent in response to a request made by Hamet, apparently for money, that he doesn't have authority to give money but that Hamet should write to the US government and will likely get his request (20 November 1802)
 
 
 ## Outcomes
