--- a/Stephen Cathalan Jr.page
+++ b/Stephen Cathalan Jr.page
@@ -1,1 +1,2 @@
 - Originally a commercial agent at Marseilles
+- Appointed a naval agent by [Richard Valentine Morris](), 20 November 1802 (BW2:318)
