a month at Malaga

--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -14,6 +14,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
 - [USS *New York*]() lost several sails and masts before even leaving the USA (BW2:270, 8 September 1802)
 - [USS *Constellation*]() breaks a pintle of its rudder, requiring the rudder to be unhung and the part to be replaced (around 10 days of repair time?), (BW2:277, 18 September 1802)
 - [USS *Constellation*]() springs its foremast and foreyard on its way from Toulon to Gibraltar (BW2:316, 19 November 1802)
+    - Constellation puts in at Malaga to get repairs. [Alexander Murray]() thinks Malaga is a good place for repairs, as well as being a relatively inexpensive place; nevertheless, he estimates that they will be in port for a month (BW2:319)
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97). (See also [Death by violence]().)
