--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -1,5 +1,7 @@
 One of the constant questions for the squadron was whether to get supplies from America or buy them from places in the Mediterranean. Eventually the squadron adopted a hybrid policy on this question.
 
+- BW2:319: [Alexander Murray]() suggests less supplies from America and more in the Med: "I must beg leave to observe to you that I think it woud be a great saving to the Government, if instead of incumbering our Ships with such large quantities of Bread, which takes up so much room that a due proportion of Flour might be sent over & above three Months store for present use, we can have the Flour landed here or at Malta & get good fresh Bread Baked out of it at little expence & no waste, consequently more salt Provisions might be taken on board, & less Water than usual so that each Ship coud carry at least eight Months Provisions, & Stores, for the having of extra stores deposited at Gibralter, is little better than having them in America, so very precarious, & uncertain are our passages up & down the Mediterranean, for an extent of near 1500 Miles to the Coast of Tripoli" (21 November 1802)
+
 ## From America
 - BW1:548: *American Packet* dispatched from Washington DC to Gibraltar with supplies for squadron, 14 August 1801
     - BW1:594-95: *American Packet* captured by Spanish privateers and brought to Algeciras, 5 October 1801; she turns out to have been carrying some private cargo as well (which was a violation of the blockade? [Richard Dale]() seems to think this was a problem and an ethical violation; not quite sure why).
