general permission in Malaga

--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -19,6 +19,7 @@ cannot help observing to your Excellency that I conceive such conduct
 more resembles the Savages than a civilized nation." (BW1:609)
     - **Important**: Dale puts all the blame for this on the governor of St. Roque, and does not want to believe that this behavior is sanctioned by the king (see BW1:611); threatens consequences if the king is in fact aware of his governor's behavior. (See [Honor]().)
     - A court of inquiry into the conduct of the two forts was conducted, and it seems that the officers were convicted? At least "still in confinement." And [Richard Dale]() states that he would have consented to acquittal of the officers; "Your excellency may be assured it is my wish, that the transaction may be Buried in oblevion, Hoping that nothing of the kind will take place again" (BW2:20, 7 March 1802)
+- [Alexander Murray]() writes to [Charles Pinckney]() to ask him to obtain a general permission for American naval vessels to haul into the mole of Malaga (and possibly Cadiz) if necessary, as merely staying in the outer roads offers little protection from the elements (BW2:324, 26 November 1802)
 
 
 ## Scandinavia
