--- a/USS New York.page
+++ b/USS New York.page
@@ -1,5 +1,9 @@
+### General agenda
 - Recruited to join navy to reinforce Morris's squadron
 - Sailed from Washington 1 September 1802
 - Sailed from Hampton Roads 8 October 1802
 - Arrived in Gibraltar 14 November 1802
 - Returned to Washington 9 December 1803, laid up in ordinary (BW2:137)
+
+### Specifics
+- BW2:325: [Stephen Decatur]() and others certify that the foremast of the *New York* is sprung and is unsafe to go to sea (27 November 1802)
