--- a/People.page
+++ b/People.page
@@ -9,6 +9,7 @@
 
 ## U.S. Navy
 - [Hugh G. Campbell]()
+- [Richard Dale]()
 - [Daniel McNeill]()
 - [Richard Valentine Morris]()
 - [Alexander Murray]()
