--- a/Science.page
+++ b/Science.page
@@ -22,6 +22,7 @@
 - BW2:15: [Samuel Barron]() in [USS *Philadelphia*]() arrived in Malta, 25 December 1801, with several officers and 50 men sick with pleurisies and scurvy (could not leave until the 20 men in hospital were well again)
 - BW2:102: [USS *Constellation*]() loses three men before even making it to the Mediterranean: 2 from small pox and one from a "violent Cold" (1 April 1802)
 - BW2:268: [Hugh G. Campbell]() of [USS *Adams*]() sends 12 men home immediately on the [USS *Boston*]() upon arrival in the Med because of disease, 7 September 1802
+- BW2:326: Over 100 men on [USS *Constellation*]() sick with "violent Colds" (29 November 1802)
 
 ## [Dealing with disease]()
     
