--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -76,4 +76,4 @@ more resembles the Savages than a civilized nation." (BW1:609)
 # Relations amongst European nations
 - 12 July 1801: American navy in Gibraltar gets to watch a battle between the English and the French off Algeciras (BW1:519)
 - 10 May 1802: [Richard O'Brien](): "by The definitive treaty there seems to be a prospect of a reform takeing place in The Barbary System, it is Much wanted"---a change in relations between England and France might change their relationships to the Barbary states, and by extension the Barbary states' relations with the USA (BW2:147) 
-- 30 November 1802: [Daniel Carmick]() thinks that the English and the French may start up hostilities again (BW2:327)
+- 30 November 1802: [Daniel Carmick]() thinks that the English and the French may start up hostilities again over Malta, as neither navy wants to give the island up or go home (BW2:327)
