Malta is the best

--- a/Malta.page
+++ b/Malta.page
@@ -1,1 +1,3 @@
 - 17 July 1801: [Richard Dale]() says he will water at Malta while he's standing off Tunis and Tripoli (BW1:515)
+- BW2:327: [Henry Wadsworth]() calls Valletta, Malta, "one of the best Harbours
+in the Meditterranean excepting at Port Mahon" (30 November 1802)
