--- a/Death from unknown cause.page
+++ b/Death from unknown cause.page
@@ -1,2 +1,3 @@
 - 16 August 1802: Thomas Bird, ordinary seaman on board the [USS *Constellation*]() (BW2:236)
-- 8 September 1802: Mathias Guise, ordinary seaman on board the [USS *Constellation]() (BW2:270)
+- 8 September 1802: Mathias Guise, ordinary seaman on board the [USS *Constellation*]() (BW2:270)
+- 5 December 1802: Frances Sweeny, marine on board the [USS *Constellation*]() (BW2:329)
