--- a/Richard Dale.page
+++ b/Richard Dale.page
@@ -1,1 +1,2 @@
 - After returning from the Mediterranean, Dale is once again tapped to lead a small relief squadron back at the end of 1802 (BW2:326, 28 November 1802)
+    - BW2:330: Dale apparently writes to ask whether he might be an admiral, and if not, to decline the mission; SecNav rather archly responds that there are no admirals, and further, "no Officer of the Navy can consistently be allowed to decline at his will & pleasure a service to which he may be ordered by the President" (10 December 1802)
