--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -19,3 +19,4 @@ One of the major difficulties the navy faced in the Mediterranean was the fact t
 
 ### Questions and criticisms
 - BW2:287: [James Leander Cathcart]() writes to SecState urging more energy from the federal government on the question of force in the Med; he notes that [Alexander Murray]() believes they should pay for peace for the next two years until the government will be more energized for political reasons (which Cathcart does not agree with) (8 October 1802)
+- BW2:331: [Alexander Murray]() writes to [Richard Valentine Morris](), upon receiving orders to head for home: "I cant think but they have been premature in ordering so many of our Ships home, but I have no right to scrutinize" (12 December 1802)
