--- a/Deaths from illness.page
+++ b/Deaths from illness.page
@@ -1,1 +1,2 @@
 - BW2:102: [USS Constellation]() loses three men before even making it to the Mediterranean: 2 from small pox and one from a “violent Cold” (1 April 1802)
+- BW2:334: William Prince, marine on board the [USS *John Adams*](), died of a fever, 28 November 1802
