--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -3,11 +3,12 @@ Naval officers often gave clues about how they perceived their enemies and even 
 # Barbary 
 ## Cowardly
 - [John R. Fenwick](), 3 February 1802: "none of our Vessels as yet have been taken, & whilst the Dread of the Americans exists, the pusillanimity of these people will prevent them leaving their Ports" (BW2:47)
-- 
 
 ## Polite
 - [William Bainbridge]() comments that the governor of Tangier received them "with civility & a degree of Moorish politeness" (BW2:65, 25 February 1802)
-- 
+
+## Deceitful
+- [Hugh G. Campbell]() writes to [William Burrows](): "Be assured Sir, they [specifically the Moroccans] are Slippery Politicians, & require good Looking after Either in peace or war" (BW2:335, 16 December 1802)
 
 # Europeans
 - [Alexander Murray]() sees Europeans as cowardly and selfish: " Why will the narrow & selfish policy of European nations suffer those Piratical powers thus to usurp the dominion of this Sea? Ought they not rather to be put under the Ban of all civilization? Was there a chance of making war with them, upon such terms as not to effect the liberty of those, who fall into their hands, & to exchange man for man, some excuse might be alledged, but on the present form of warfare, all nations ought to cry aloud against them." (BW2:155, 18 May 1802)
