--- a/People.page
+++ b/People.page
@@ -13,6 +13,7 @@
 - [Daniel McNeill]()
 - [Richard Valentine Morris]()
 - [Alexander Murray]()
+- [Presley O'Bannon](), marine
 - [Edward Preble]()
 
 ## Politicians
