Simpson on Morocco

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -38,3 +38,11 @@
 ## Meshouda
 - BW2:275: Simpson and Campbell asked for voucher from the emperor of Morocco that the Tripolitan ship was actually his, and he gave it to them: " she carrys Our Victorious Flag, and goes on the fulfillment of Our Orders and intentions. - Let no one oppose her or hinder her, neither do her any Injury; and we Order all the Consuls to despatch her, and deliver their Passports." 
 - BW2:337-38: After a passport was granted to the Meshouda, apparently its captain felt that the [USS *Adams*]() ([Hugh G. Campbell]()) was just waiting outside Gibraltar to capture it if it left; therefore, Meshouda stayed in Gibraltar and its captain filed a complaint with the Moroccan government (24 December 1802)
+- 
+
+# Other nations' relations with Morocco
+- James Simpson reports on others' relations with Morocco:
+    - Russia: no relationship with Morocco
+    - Prussia: no official relationship; a captured Prussian ship was remediated through Spain
+    - Sweden: sent presents of stores for 30 years without an official treaty; currently seem to be in treaty negotiations
+    - Denmark: pays $25,000 annually in tribute, but has no commerce
