--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -46,3 +46,10 @@
     - Prussia: no official relationship; a captured Prussian ship was remediated through Spain
     - Sweden: sent presents of stores for 30 years without an official treaty; currently seem to be in treaty negotiations
     - Denmark: pays $25,000 annually in tribute, but has no commerce
+    - Holland: has no ambassador, but has sent Admiral DeWinter possibly to start negotiations; Simpson notes that there aren't many Dutch ships in the Mediterranean
+    - England: does not pay tribute or send presents; however, they're supposed to get unlimited provisions for their Mediterranean stations, and they haven't received them for several seasons
+    - France: no consuls or embassies, no ratification of the treaty that had existed before; France does trade with Morocco but does not send presents or pay tribute
+    - Portugal: Portugal and Morocco are in dispute with each other over some business transactions; Portugal does not pay tribute, but does give presents and allows Morocco's cruisers to refit at Lisbon
+    - Spain: does not enforce the 1799 treaty with Morocco; Morocco actually owes Spanish agents $100,000; nevertheless, Spain still gives occasional presents
+    - Germany: no official relationship, but Morocco allows German ships to trade unmolested
+    - 
